Updated page FeaturePython Custom Properties/pl

--- a/wiki/pl/FeaturePython_Custom_Properties.html
+++ b/wiki/pl/FeaturePython_Custom_Properties.html
@@ -340,11 +340,8 @@
 <p><span style="font-size:small;"><a href="../pl/Release_notes_0.21.html" title="Release notes 0.21/pl">dost&#281;pne w wersji 0.21</a></span>
 </p>
 <h2><span class="mw-headline" id="App::PropertyLength">App::PropertyLength</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Atrybut d&#322;ugo&#347;ci. Mo&#380;e zawiera&#263; dodatni&#261; lub zerow&#261; warto&#347;&#263; d&#322;ugo&#347;ci. U&#380;yj elementu "Value" atrybutu, aby uzyska&#263; warto&#347;&#263; jako liczb&#281; zmiennoprzecinkow&#261;. Warto&#347;&#263; zawsze jest podawana w milimetrach, ale w edytorze w&#322;a&#347;ciwo&#347;ci jest prezentowana zgodnie z preferencjami dotycz&#261;cymi jednostek. Wi&#281;cej szczeg&oacute;&#322;&oacute;w znajdziesz w sekcji dotycz&#261;cej <a href="#Creating">Tworzenia obiektu FeaturePython i dodawania do niego atrybutu</a>.
-</p>
-</div>
-<p><a href="#App::PropertyDistance">App::PropertyDistance</a> to podobna w&#322;a&#347;ciwo&#347;&#263;, kt&oacute;ra nie mo&#380;e zawiera&#263; warto&#347;ci ujemnej.
+<p>Atrybut d&#322;ugo&#347;ci. Mo&#380;e zawiera&#263; dodatni&#261; lub zerow&#261; warto&#347;&#263; d&#322;ugo&#347;ci. U&#380;yj elementu "Value" atrybutu, aby uzyska&#263; warto&#347;&#263; jako liczb&#281; zmiennoprzecinkow&#261;. Warto&#347;&#263; zawsze jest podawana w milimetrach, ale w <a href="../pl/Property_View.html" title="Property View/pl">Widoku w&#322;a&#347;ciwo&#347;ci</a> jest prezentowana zgodnie z preferencjami dotycz&#261;cymi jednostek. Wi&#281;cej szczeg&oacute;&#322;&oacute;w znajdziesz w sekcji dotycz&#261;cej <a href="#Tworzenie">Tworzenia obiektu FeaturePython i dodawania do niego atrybutu</a>.
+</p><p><a href="#App::PropertyDistance">App::PropertyDistance</a> to podobna w&#322;a&#347;ciwo&#347;&#263;, kt&oacute;ra nie mo&#380;e zawiera&#263; warto&#347;ci ujemnej.
 </p>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">obj</span> <span class="o">=</span> <span class="n">FreeCAD</span><span class="o">.</span><span class="n">ActiveDocument</span><span class="o">.</span><span class="n">addObject</span><span class="p">(</span><span class="s2">"App::FeaturePython"</span><span class="p">,</span> <span class="s2">"InternalObjectName"</span><span class="p">)</span>
 <span class="n">obj</span><span class="o">.</span><span class="n">Label</span> <span class="o">=</span> <span class="s2">"User-friendly label"</span>
@@ -1071,12 +1068,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112080238
+Cached time: 20260112080308
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.256 seconds
-Real time usage: 0.273 seconds
+CPU time usage: 0.294 seconds
+Real time usage: 0.328 seconds
 Preprocessor visited node count: 2494/1000000
 Post&#8208;expand include size: 21087/2097152 bytes
 Template argument size: 35629/2097152 bytes
@@ -1087,17 +1084,17 @@ Unstrip post&#8208;expand size: 154093/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   51.688      1 -total
- 55.34%   28.607     95 Template:Code
-  7.25%    3.746     43 Template:Version/pl
-  6.41%    3.314      1 Template:Userdocnavi/pl
-  4.99%    2.578     35 Template:Incode
-  2.70%    1.395      1 Template:TOCright
-  2.67%    1.378    133 Template:TODO
-  2.35%    1.217      1 Template:Navigation_menu_2
+100.00%   62.496      1 -total
+ 54.53%   34.077     95 Template:Code
+  8.71%    5.444      1 Template:Userdocnavi/pl
+  7.56%    4.722     43 Template:Version/pl
+  6.17%    3.858     35 Template:Incode
+  2.87%    1.791      1 Template:Navigation_menu_2
+  2.63%    1.642      1 Template:TOCright
+  2.59%    1.620    133 Template:TODO
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253299-0!canonical and timestamp 20260112080238 and revision id 1737288. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253299-0!canonical and timestamp 20260112080307 and revision id 1737290. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
