--- a/wiki/pl/FeaturePython_Custom_Properties.html
+++ b/wiki/pl/FeaturePython_Custom_Properties.html
@@ -3,7 +3,7 @@
 <li><a href="../FeaturePython_Custom_Properties.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="FeaturePython Custom Properties (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/FeaturePython_Custom_Properties.html" class="mw-pt-progress mw-pt-progress--high" title="Propri&eacute;t&eacute;s personnalis&eacute;es des fonctions de Python (97% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/FeaturePython_Custom_Properties.html" class="mw-pt-progress mw-pt-progress--low" title="Propriet&agrave; personalizzate FeaturePython (1% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="pl" dir="ltr">polski</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="pl" dir="ltr">polski</span></li>
 <li><a href="../ru/FeaturePython_Custom_Properties.html" class="mw-pt-progress mw-pt-progress--low" title="&#1057;&#1087;&#1080;&#1089;&#1086;&#1082; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074; FeaturePython (1% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/FeaturePython_Custom_Properties.html" class="mw-pt-progress mw-pt-progress--low" title="FeaturePython &#12459;&#12473;&#12479;&#12512;&#12503;&#12525;&#12497;&#12486;&#12451;&#12540; (1% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li></ul></div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
@@ -782,10 +782,8 @@
 <span class="n">obj</span><span class="o">.</span><span class="n">ThePropertyName</span> <span class="c1"># Vector (2.0, 4.0, 12.0)</span>
 </pre></div>
 <h2><span class="mw-headline" id="App::PropertyVectorDistance">App::PropertyVectorDistance</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Atrybut typu wektorowego, kt&oacute;ry jest prawie identyczny z <a href="#App::PropertyVector">App::PropertyVector</a>. Jedyn&#261; r&oacute;&#380;nic&#261; jest to, &#380;e w <a href="../pl/Property_editor.html" class="mw-redirect" title="Property editor/pl">edytorze w&#322;a&#347;ciwo&#347;ci</a> "x", "y" i "z" tego atrybutu s&#261; prezentowane zgodnie z preferencjami jednostek. Jednak wewn&#281;trznie wszystkie warto&#347;ci s&#261; bezwymiarowe i dlatego wyra&#380;ane s&#261; w mm.
+<p>Atrybut typu wektorowego, kt&oacute;ry jest prawie identyczny z <a href="#App::PropertyVector">App::PropertyVector</a>. Jedyn&#261; r&oacute;&#380;nic&#261; jest to, &#380;e w <a href="../pl/Property_View.html" title="Property View/pl">Widoku w&#322;a&#347;ciwo&#347;ci</a> "x", "y" i "z" tego atrybutu s&#261; prezentowane zgodnie z preferencjami jednostek. Jednak wewn&#281;trznie wszystkie warto&#347;ci s&#261; bezwymiarowe i dlatego wyra&#380;ane s&#261; w mm.
 </p>
-</div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">obj</span> <span class="o">=</span> <span class="n">FreeCAD</span><span class="o">.</span><span class="n">ActiveDocument</span><span class="o">.</span><span class="n">addObject</span><span class="p">(</span><span class="s2">"App::FeaturePython"</span><span class="p">,</span> <span class="s2">"InternalObjectName"</span><span class="p">)</span>
 <span class="n">obj</span><span class="o">.</span><span class="n">Label</span> <span class="o">=</span> <span class="s2">"User-friendly label"</span>
 <span class="n">obj</span><span class="o">.</span><span class="n">addProperty</span><span class="p">(</span><span class="s2">"App::PropertyVectorDistance"</span><span class="p">,</span> <span class="s2">"ThePropertyName"</span><span class="p">,</span> <span class="s2">"Subsection"</span><span class="p">,</span> <span class="s2">"Description for tooltip"</span><span class="p">)</span>
@@ -1068,33 +1066,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112080308
+Cached time: 20260112080321
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.294 seconds
-Real time usage: 0.328 seconds
-Preprocessor visited node count: 2494/1000000
+CPU time usage: 0.241 seconds
+Real time usage: 0.266 seconds
+Preprocessor visited node count: 2493/1000000
 Post&#8208;expand include size: 21087/2097152 bytes
 Template argument size: 35629/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 95/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 154093/5000000 bytes
+Unstrip post&#8208;expand size: 154097/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   62.496      1 -total
- 54.53%   34.077     95 Template:Code
-  8.71%    5.444      1 Template:Userdocnavi/pl
-  7.56%    4.722     43 Template:Version/pl
-  6.17%    3.858     35 Template:Incode
-  2.87%    1.791      1 Template:Navigation_menu_2
-  2.63%    1.642      1 Template:TOCright
-  2.59%    1.620    133 Template:TODO
+100.00%   47.196      1 -total
+ 53.97%   25.472     95 Template:Code
+  8.33%    3.930     43 Template:Version/pl
+  8.03%    3.791      1 Template:Userdocnavi/pl
+  5.60%    2.642     35 Template:Incode
+  2.80%    1.321      1 Template:TOCright
+  2.66%    1.257    133 Template:TODO
+  2.07%    0.976      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253299-0!canonical and timestamp 20260112080307 and revision id 1737290. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253299-0!canonical and timestamp 20260112080321 and revision id 1737292. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
