--- a/wiki/cs/Manual;All_workbenches_at_a_glance.html
+++ b/wiki/cs/Manual;All_workbenches_at_a_glance.html
@@ -1061,10 +1061,8 @@
 </td></tr></tbody></table>
 </div>
 <h3><span class="mw-headline" id="BIM">BIM</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The <span typeof="mw:File"><a href="../index.php?title=Workbench_BIM.svg&amp;filetimestamp=20240524155736&amp;.html" class="mw-file-description"><img src="../File/Workbench_BIM.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../BIM_Workbench.html" title="BIM Workbench">BIM Workbench</a> (a combination of the former BIM, Native-IFC and Arch Workbenches) workbench is tailored for architectural design and construction planning, offering tools to create and manipulate parametric building elements like walls, slabs, columns, beams, roofs, and windows. It supports IFC (Industry Foundation Classes) for seamless data exchange with other BIM software, facilitating collaboration. Users can generate detailed 2D drawings, annotations, and construction documentation from 3D models, integrating closely with the Draft workbench for tasks like creating floor plans, sections, and elevations.
+<p><span typeof="mw:File"><a href="../index.php?title=Workbench_BIM.svg&amp;filetimestamp=20240524155736&amp;.html" class="mw-file-description"><img src="../File/Workbench_BIM.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../BIM_Workbench.html" title="BIM Workbench">Pracovn&iacute; plocha BIM</a> (kombinace d&#345;&iacute;v&#283;j&scaron;&iacute;ch pracovn&iacute;ch prost&#345;ed&iacute; BIM, Native-IFC a Arch) je p&#345;izp&#367;sobena pro architektonick&yacute; n&aacute;vrh a pl&aacute;nov&aacute;n&iacute; stavby a nab&iacute;z&iacute; n&aacute;stroje pro vytv&aacute;&#345;en&iacute; a manipulaci s parametrick&yacute;mi stavebn&iacute;mi prvky, jako jsou st&#283;ny, desky, sloupy, nosn&iacute;ky, st&#345;echy a okna. Podporuje IFC (Industry Foundation Classes) pro plynulou v&yacute;m&#283;nu dat s jin&yacute;m BIM softwarem, co&#382; usnad&#328;uje spolupr&aacute;ci. U&#382;ivatel&eacute; mohou z 3D model&#367; generovat podrobn&eacute; 2D v&yacute;kresy, pozn&aacute;mky a stavebn&iacute; dokumentaci, a to v &uacute;zk&eacute; integraci s pracovn&iacute;m prost&#345;ed&iacute;m Draft pro &uacute;koly, jako je vytv&aacute;&#345;en&iacute; p&#367;dorys&#367;, &#345;ez&#367; a pohled&#367;.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="wikitable" style="width:100%">
 <tbody><tr>
@@ -1298,13 +1296,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112083120
+Cached time: 20260112083316
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.497 seconds
-Real time usage: 0.751 seconds
-Preprocessor visited node count: 629/1000000
+CPU time usage: 0.492 seconds
+Real time usage: 0.732 seconds
+Preprocessor visited node count: 628/1000000
 Post&#8208;expand include size: 8634/2097152 bytes
 Template argument size: 944/2097152 bytes
 Highest expansion depth: 5/100
@@ -1314,13 +1312,13 @@ Unstrip post&#8208;expand size: 2868/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.502      1 -total
- 72.94%    6.931      1 Template:Manual:TOC
- 54.52%    5.181      1 Manual:Summary/cs
- 21.42%    2.035      2 Template:Docnav
+100.00%    8.232      1 -total
+ 70.10%    5.771      1 Template:Manual:TOC
+ 46.94%    3.864      1 Manual:Summary/cs
+ 24.02%    1.977      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112083119 and revision id 1737298. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112083315 and revision id 1737300. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
