--- a/wiki/cs/Manual;All_workbenches_at_a_glance.html
+++ b/wiki/cs/Manual;All_workbenches_at_a_glance.html
@@ -1063,16 +1063,15 @@
 <h3><span class="mw-headline" id="BIM">BIM</span></h3>
 <p><span typeof="mw:File"><a href="../index.php?title=Workbench_BIM.svg&amp;filetimestamp=20240524155736&amp;.html" class="mw-file-description"><img src="../File/Workbench_BIM.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../BIM_Workbench.html" title="BIM Workbench">Pracovn&iacute; plocha BIM</a> (kombinace d&#345;&iacute;v&#283;j&scaron;&iacute;ch pracovn&iacute;ch prost&#345;ed&iacute; BIM, Native-IFC a Arch) je p&#345;izp&#367;sobena pro architektonick&yacute; n&aacute;vrh a pl&aacute;nov&aacute;n&iacute; stavby a nab&iacute;z&iacute; n&aacute;stroje pro vytv&aacute;&#345;en&iacute; a manipulaci s parametrick&yacute;mi stavebn&iacute;mi prvky, jako jsou st&#283;ny, desky, sloupy, nosn&iacute;ky, st&#345;echy a okna. Podporuje IFC (Industry Foundation Classes) pro plynulou v&yacute;m&#283;nu dat s jin&yacute;m BIM softwarem, co&#382; usnad&#328;uje spolupr&aacute;ci. U&#382;ivatel&eacute; mohou z 3D model&#367; generovat podrobn&eacute; 2D v&yacute;kresy, pozn&aacute;mky a stavebn&iacute; dokumentaci, a to v &uacute;zk&eacute; integraci s pracovn&iacute;m prost&#345;ed&iacute;m Draft pro &uacute;koly, jako je vytv&aacute;&#345;en&iacute; p&#367;dorys&#367;, &#345;ez&#367; a pohled&#367;.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="wikitable" style="width:100%">
 <tbody><tr>
-<th>Tool
+<th>N&aacute;stroj
 </th>
-<th>Description
+<th>Popis
 </th>
-<th>Tool
+<th>N&aacute;stroj
 </th>
-<th>Description
+<th>Popis
 </th></tr>
 <tr>
 <td><span typeof="mw:File"><a href="../index.php?title=Arch_Site.svg&amp;filetimestamp=20250123011723&amp;.html" class="mw-file-description"><img src="../File/Arch_Site.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Arch_Site.html" title="Arch Site">Site</a>
@@ -1245,7 +1244,6 @@
 </td>
 <td>Creates different types of schedules to collect data from the model
 </td></tr></tbody></table>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Other_built-in_workbenches">Other built-in workbenches</span></h3>
 </div>
@@ -1296,13 +1294,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112083316
+Cached time: 20260112083410
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.492 seconds
-Real time usage: 0.732 seconds
-Preprocessor visited node count: 628/1000000
+CPU time usage: 0.522 seconds
+Real time usage: 1.218 seconds
+Preprocessor visited node count: 627/1000000
 Post&#8208;expand include size: 8634/2097152 bytes
 Template argument size: 944/2097152 bytes
 Highest expansion depth: 5/100
@@ -1312,13 +1310,13 @@ Unstrip post&#8208;expand size: 2868/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.232      1 -total
- 70.10%    5.771      1 Template:Manual:TOC
- 46.94%    3.864      1 Manual:Summary/cs
- 24.02%    1.977      2 Template:Docnav
+100.00%   11.421      1 -total
+ 64.72%    7.392      1 Template:Manual:TOC
+ 45.66%    5.215      1 Manual:Summary/cs
+ 27.37%    3.126      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112083315 and revision id 1737300. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112083409 and revision id 1737302. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
