Created page with "=== Další vestavěné pracovní plochy ==="

--- a/wiki/cs/Manual;All_workbenches_at_a_glance.html
+++ b/wiki/cs/Manual;All_workbenches_at_a_glance.html
@@ -1244,9 +1244,9 @@
 </td>
 <td>Creates different types of schedules to collect data from the model
 </td></tr></tbody></table>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Other_built-in_workbenches">Other built-in workbenches</span></h3>
-</div>
+<p><span id="Other_built-in_workbenches"></span>
+</p>
+<h3><span id="Dal.C5.A1.C3.AD_vestav.C4.9Bn.C3.A9_pracovn.C3.AD_plochy"></span><span class="mw-headline" id="Dal&scaron;&iacute;_vestav&#283;n&eacute;_pracovn&iacute;_plochy">Dal&scaron;&iacute; vestav&#283;n&eacute; pracovn&iacute; plochy</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Although the above summarizes the most important tools of FreeCAD, many more workbenches are available, among them:
 </p>
@@ -1294,12 +1294,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112083410
+Cached time: 20260112083501
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.522 seconds
-Real time usage: 1.218 seconds
+CPU time usage: 0.474 seconds
+Real time usage: 0.657 seconds
 Preprocessor visited node count: 627/1000000
 Post&#8208;expand include size: 8634/2097152 bytes
 Template argument size: 944/2097152 bytes
@@ -1310,13 +1310,13 @@ Unstrip post&#8208;expand size: 2868/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.421      1 -total
- 64.72%    7.392      1 Template:Manual:TOC
- 45.66%    5.215      1 Manual:Summary/cs
- 27.37%    3.126      2 Template:Docnav
+100.00%    8.022      1 -total
+ 67.53%    5.417      1 Template:Manual:TOC
+ 51.33%    4.118      1 Manual:Summary/cs
+ 27.20%    2.182      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112083409 and revision id 1737302. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112083500 and revision id 1737304. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
