--- a/wiki/cs/Manual;All_workbenches_at_a_glance.html
+++ b/wiki/cs/Manual;All_workbenches_at_a_glance.html
@@ -6,7 +6,7 @@
 <li><a href="../it/Manual;All_workbenches_at_a_glance.html" class="mw-pt-progress mw-pt-progress--med" title="Manuale: Panoramica su tutti gli ambienti di lavoro (65% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Manual;All_workbenches_at_a_glance.html" class="mw-pt-progress mw-pt-progress--complete" title="Podr&#281;cznik:&#346;rodowiska pracy - przegl&#261;d (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ro/Manual;All_workbenches_at_a_glance.html" class="mw-pt-progress mw-pt-progress--med" title="Manual:Toate atelierele dintr-o privire (29% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Manual;All_workbenches_at_a_glance.html" class="mw-pt-progress mw-pt-progress--high" title="&#1056;&#1091;&#1082;&#1086;&#1074;&#1086;&#1076;&#1089;&#1090;&#1074;&#1086;:&#1055;&#1077;&#1088;&#1074;&#1099;&#1081; &#1074;&#1079;&#1075;&#1083;&#1103;&#1076; &#1085;&#1072; &#1074;&#1089;&#1077; &#1074;&#1077;&#1088;&#1089;&#1090;&#1072;&#1082;&#1080; (97% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Manual;All_workbenches_at_a_glance.html" class="mw-pt-progress mw-pt-progress--med" title="&#25163;&#20876;&#65306;&#19968;&#35272;&#25152;&#26377;&#24037;&#20316;&#21488; (39% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ja/Manual;All_workbenches_at_a_glance.html" class="mw-pt-progress mw-pt-progress--low" title="&#12510;&#12491;&#12517;&#12450;&#12523;&#65306;&#12527;&#12540;&#12463;&#12505;&#12531;&#12481;&#19968;&#35239; (3% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -1247,10 +1247,8 @@
 <p><span id="Other_built-in_workbenches"></span>
 </p>
 <h3><span id="Dal.C5.A1.C3.AD_vestav.C4.9Bn.C3.A9_pracovn.C3.AD_plochy"></span><span class="mw-headline" id="Dal&scaron;&iacute;_vestav&#283;n&eacute;_pracovn&iacute;_plochy">Dal&scaron;&iacute; vestav&#283;n&eacute; pracovn&iacute; plochy</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Although the above summarizes the most important tools of FreeCAD, many more workbenches are available, among them:
+<p>A&#269;koli v&yacute;&scaron;e uveden&eacute; shrnuje nejd&#367;le&#382;it&#283;j&scaron;&iacute; n&aacute;stroje FreeCADu, je k dispozici mnoho dal&scaron;&iacute;ch pracovn&iacute;ch ploch, mezi nimi&#382; jsou:
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li>The <a href="../TechDraw_Workbench.html" title="TechDraw Workbench">TechDraw Workbench</a> for producing technical drawings from 3D models.</li>
 <li>The <a href="../Mesh_Workbench.html" title="Mesh Workbench">Mesh Workbench</a> allows to work with <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Polygon_mesh">polygon meshes</a>. Although meshes are not the preferred type of geometry to work with in FreeCAD, because of their lack of precision and support for curves, meshes still have a lot of uses and are fully supported in FreeCAD. The Mesh Workbench also offers a number of Part-to-Mesh and Mesh-to-Part tools.</li>
@@ -1294,29 +1292,29 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112083501
+Cached time: 20260112083511
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.474 seconds
-Real time usage: 0.657 seconds
-Preprocessor visited node count: 627/1000000
+CPU time usage: 0.456 seconds
+Real time usage: 0.619 seconds
+Preprocessor visited node count: 626/1000000
 Post&#8208;expand include size: 8634/2097152 bytes
 Template argument size: 944/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2868/5000000 bytes
+Unstrip post&#8208;expand size: 2869/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.022      1 -total
- 67.53%    5.417      1 Template:Manual:TOC
- 51.33%    4.118      1 Manual:Summary/cs
- 27.20%    2.182      2 Template:Docnav
+100.00%    9.333      1 -total
+ 64.79%    6.047      1 Template:Manual:TOC
+ 48.76%    4.551      1 Manual:Summary/cs
+ 28.44%    2.654      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112083500 and revision id 1737304. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112083510 and revision id 1737306. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
