Created page with "* [[TechDraw_Workbench|Pracovní prostředí TechDraw]] pro vytváření technických výkresů z 3D modelů. * The [[Mesh_Workbench|Pracovní plocha Mesh]] umožňuje práci s [https://en.wikipedia.org/wiki/Polygon_mesh polygonovými sítěmi]. Ačkoli sítě nejsou preferovaným typem geometrie pro práci ve FreeCADu kvůli jejich nedostatečné přesnosti a podpoře křivek, mají sítě stále mnoho využití a jsou ve FreeCADu plně podporovány. Pracovní plocha Me..."

--- a/wiki/cs/Manual;All_workbenches_at_a_glance.html
+++ b/wiki/cs/Manual;All_workbenches_at_a_glance.html
@@ -1249,12 +1249,10 @@
 <h3><span id="Dal.C5.A1.C3.AD_vestav.C4.9Bn.C3.A9_pracovn.C3.AD_plochy"></span><span class="mw-headline" id="Dal&scaron;&iacute;_vestav&#283;n&eacute;_pracovn&iacute;_plochy">Dal&scaron;&iacute; vestav&#283;n&eacute; pracovn&iacute; plochy</span></h3>
 <p>A&#269;koli v&yacute;&scaron;e uveden&eacute; shrnuje nejd&#367;le&#382;it&#283;j&scaron;&iacute; n&aacute;stroje FreeCADu, je k dispozici mnoho dal&scaron;&iacute;ch pracovn&iacute;ch ploch, mezi nimi&#382; jsou:
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>The <a href="../TechDraw_Workbench.html" title="TechDraw Workbench">TechDraw Workbench</a> for producing technical drawings from 3D models.</li>
-<li>The <a href="../Mesh_Workbench.html" title="Mesh Workbench">Mesh Workbench</a> allows to work with <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Polygon_mesh">polygon meshes</a>. Although meshes are not the preferred type of geometry to work with in FreeCAD, because of their lack of precision and support for curves, meshes still have a lot of uses and are fully supported in FreeCAD. The Mesh Workbench also offers a number of Part-to-Mesh and Mesh-to-Part tools.</li>
-<li>The <a href="../Spreadsheet_Workbench.html" title="Spreadsheet Workbench">Spreadsheet Workbench</a> permits the creation and manipulation of spreadsheet data, that can be extracted from FreeCAD models. Spreadsheet cells can also be referenced in many areas of FreeCAD, making it possible to use them as master data structures.</li>
-<li>The <a href="../FEM_Workbench.html" title="FEM Workbench">FEM Workbench</a> deals with <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Finite_element_method">Finite Elements Analysis</a> and makes it possible to perform pre- and post-processing of FEM analyses and to display the results graphically.</li></ul>
-</div>
+<ul><li><a href="../TechDraw_Workbench.html" title="TechDraw Workbench">Pracovn&iacute; prost&#345;ed&iacute; TechDraw</a> pro vytv&aacute;&#345;en&iacute; technick&yacute;ch v&yacute;kres&#367; z 3D model&#367;.</li>
+<li>The <a href="../Mesh_Workbench.html" title="Mesh Workbench">Pracovn&iacute; plocha Mesh</a> umo&#382;&#328;uje pr&aacute;ci s <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Polygon_mesh">polygonov&yacute;mi s&iacute;t&#283;mi</a>. A&#269;koli s&iacute;t&#283; nejsou preferovan&yacute;m typem geometrie pro pr&aacute;ci ve FreeCADu kv&#367;li jejich nedostate&#269;n&eacute; p&#345;esnosti a podpo&#345;e k&#345;ivek, maj&iacute; s&iacute;t&#283; st&aacute;le mnoho vyu&#382;it&iacute; a jsou ve FreeCADu pln&#283; podporov&aacute;ny. Pracovn&iacute; plocha Mesh tak&eacute; nab&iacute;z&iacute; &#345;adu n&aacute;stroj&#367; pro p&#345;evod d&iacute;l&#367; na s&iacute;t&#283; a s&iacute;t&iacute; na sou&#269;&aacute;sti.</li>
+<li><a href="../Spreadsheet_Workbench.html" title="Spreadsheet Workbench">Pracovn&iacute; plocha Spreadsheet</a> umo&#382;&#328;uje vytv&aacute;&#345;en&iacute; a manipulaci s daty tabulkov&yacute;ch kalkulac&iacute;, kter&aacute; lze extrahovat z model&#367; programu FreeCAD. Na bu&#328;ky tabulkov&yacute;ch kalkulac&iacute; lze odkazovat v mnoha oblastech programu FreeCAD, co&#382; umo&#382;&#328;uje jejich pou&#382;it&iacute; jako hlavn&iacute;ch datov&yacute;ch struktur.</li>
+<li><a href="../FEM_Workbench.html" title="FEM Workbench">Pracovn&iacute; prost&#345;ed&iacute; FEM</a> se zab&yacute;v&aacute; <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Finite_element_method">anal&yacute;zou kone&#269;n&yacute;ch prvk&#367;</a> a umo&#382;&#328;uje prov&aacute;d&#283;t p&#345;edb&#283;&#382;n&eacute; a n&aacute;sledn&eacute; zpracov&aacute;n&iacute; anal&yacute;z FEM a graficky zobrazovat v&yacute;sledky.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="External_workbenches">External workbenches</span></h3>
 </div>
@@ -1292,13 +1290,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112083511
+Cached time: 20260112084146
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.456 seconds
-Real time usage: 0.619 seconds
-Preprocessor visited node count: 626/1000000
+CPU time usage: 0.521 seconds
+Real time usage: 0.943 seconds
+Preprocessor visited node count: 625/1000000
 Post&#8208;expand include size: 8634/2097152 bytes
 Template argument size: 944/2097152 bytes
 Highest expansion depth: 5/100
@@ -1308,13 +1306,13 @@ Unstrip post&#8208;expand size: 2869/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.333      1 -total
- 64.79%    6.047      1 Template:Manual:TOC
- 48.76%    4.551      1 Manual:Summary/cs
- 28.44%    2.654      2 Template:Docnav
+100.00%   10.729      1 -total
+ 68.79%    7.380      1 Template:Manual:TOC
+ 52.82%    5.667      1 Manual:Summary/cs
+ 25.07%    2.690      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112083510 and revision id 1737306. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112084145 and revision id 1737308. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
