--- a/wiki/cs/Manual;All_workbenches_at_a_glance.html
+++ b/wiki/cs/Manual;All_workbenches_at_a_glance.html
@@ -1253,9 +1253,9 @@
 <li>The <a href="../Mesh_Workbench.html" title="Mesh Workbench">Pracovn&iacute; plocha Mesh</a> umo&#382;&#328;uje pr&aacute;ci s <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Polygon_mesh">polygonov&yacute;mi s&iacute;t&#283;mi</a>. A&#269;koli s&iacute;t&#283; nejsou preferovan&yacute;m typem geometrie pro pr&aacute;ci ve FreeCADu kv&#367;li jejich nedostate&#269;n&eacute; p&#345;esnosti a podpo&#345;e k&#345;ivek, maj&iacute; s&iacute;t&#283; st&aacute;le mnoho vyu&#382;it&iacute; a jsou ve FreeCADu pln&#283; podporov&aacute;ny. Pracovn&iacute; plocha Mesh tak&eacute; nab&iacute;z&iacute; &#345;adu n&aacute;stroj&#367; pro p&#345;evod d&iacute;l&#367; na s&iacute;t&#283; a s&iacute;t&iacute; na sou&#269;&aacute;sti.</li>
 <li><a href="../Spreadsheet_Workbench.html" title="Spreadsheet Workbench">Pracovn&iacute; plocha Spreadsheet</a> umo&#382;&#328;uje vytv&aacute;&#345;en&iacute; a manipulaci s daty tabulkov&yacute;ch kalkulac&iacute;, kter&aacute; lze extrahovat z model&#367; programu FreeCAD. Na bu&#328;ky tabulkov&yacute;ch kalkulac&iacute; lze odkazovat v mnoha oblastech programu FreeCAD, co&#382; umo&#382;&#328;uje jejich pou&#382;it&iacute; jako hlavn&iacute;ch datov&yacute;ch struktur.</li>
 <li><a href="../FEM_Workbench.html" title="FEM Workbench">Pracovn&iacute; prost&#345;ed&iacute; FEM</a> se zab&yacute;v&aacute; <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Finite_element_method">anal&yacute;zou kone&#269;n&yacute;ch prvk&#367;</a> a umo&#382;&#328;uje prov&aacute;d&#283;t p&#345;edb&#283;&#382;n&eacute; a n&aacute;sledn&eacute; zpracov&aacute;n&iacute; anal&yacute;z FEM a graficky zobrazovat v&yacute;sledky.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="External_workbenches">External workbenches</span></h3>
-</div>
+<p><span id="External_workbenches"></span>
+</p>
+<h3><span id="Extern.C3.AD_pracovn.C3.AD_plochy"></span><span class="mw-headline" id="Extern&iacute;_pracovn&iacute;_plochy">Extern&iacute; pracovn&iacute; plochy</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>A number of other very useful workbenches produced by FreeCAD community members also exist. Although they are not included in a standard FreeCAD installation, they are easy to install as plug-ins. They are all referenced in the <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-addons">FreeCAD-addons</a> repository. Among the most developed are:
 </p>
@@ -1290,12 +1290,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112084146
+Cached time: 20260112084215
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.521 seconds
-Real time usage: 0.943 seconds
+CPU time usage: 0.584 seconds
+Real time usage: 0.865 seconds
 Preprocessor visited node count: 625/1000000
 Post&#8208;expand include size: 8634/2097152 bytes
 Template argument size: 944/2097152 bytes
@@ -1306,13 +1306,13 @@ Unstrip post&#8208;expand size: 2869/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.729      1 -total
- 68.79%    7.380      1 Template:Manual:TOC
- 52.82%    5.667      1 Manual:Summary/cs
- 25.07%    2.690      2 Template:Docnav
+100.00%   11.524      1 -total
+ 70.01%    8.068      1 Template:Manual:TOC
+ 50.39%    5.807      1 Manual:Summary/cs
+ 23.22%    2.676      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112084145 and revision id 1737308. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112084215 and revision id 1737310. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
