--- a/wiki/cs/Manual;All_workbenches_at_a_glance.html
+++ b/wiki/cs/Manual;All_workbenches_at_a_glance.html
@@ -1256,10 +1256,8 @@
 <p><span id="External_workbenches"></span>
 </p>
 <h3><span id="Extern.C3.AD_pracovn.C3.AD_plochy"></span><span class="mw-headline" id="Extern&iacute;_pracovn&iacute;_plochy">Extern&iacute; pracovn&iacute; plochy</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>A number of other very useful workbenches produced by FreeCAD community members also exist. Although they are not included in a standard FreeCAD installation, they are easy to install as plug-ins. They are all referenced in the <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-addons">FreeCAD-addons</a> repository. Among the most developed are:
+<p>Existuje tak&eacute; &#345;ada dal&scaron;&iacute;ch velmi u&#382;ite&#269;n&yacute;ch pracovn&iacute;ch ploch vytvo&#345;en&yacute;ch &#269;leny komunity FreeCADu. A&#269;koli nejsou sou&#269;&aacute;st&iacute; standardn&iacute; instalace FreeCADu, lze je snadno nainstalovat jako dopl&#328;ky. V&scaron;echny jsou uvedeny v repozit&aacute;&#345;i <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-addons">FreeCAD-addons</a>. Mezi nejrozvinut&#283;j&scaron;&iacute; pat&#345;&iacute;:
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li>The <a rel="nofollow" class="external text" href="https://github.com/hamish2014/FreeCAD_drawing_dimensioning">Drawing Dimensioning Workbench</a> offers many new tools to work directly on Drawing Sheets and allow you to add dimensions, annotations and other technical symbols with great control over their aspect. <b>The Drawing Dimensioning Workbench is no longer maintained.</b></li>
 <li>The <a rel="nofollow" class="external text" href="https://github.com/shaise/FreeCAD_FastenersWB">Fasteners Workbench</a> offers a wide range of ready-to-insert fasteners objects like screws, bolts, rods, washers and nuts. Many options and settings are available.</li>
@@ -1290,13 +1288,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112084215
+Cached time: 20260112084429
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.584 seconds
-Real time usage: 0.865 seconds
-Preprocessor visited node count: 625/1000000
+CPU time usage: 0.524 seconds
+Real time usage: 0.839 seconds
+Preprocessor visited node count: 624/1000000
 Post&#8208;expand include size: 8634/2097152 bytes
 Template argument size: 944/2097152 bytes
 Highest expansion depth: 5/100
@@ -1306,13 +1304,13 @@ Unstrip post&#8208;expand size: 2869/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.524      1 -total
- 70.01%    8.068      1 Template:Manual:TOC
- 50.39%    5.807      1 Manual:Summary/cs
- 23.22%    2.676      2 Template:Docnav
+100.00%    9.189      1 -total
+ 69.40%    6.377      1 Template:Manual:TOC
+ 51.05%    4.691      1 Manual:Summary/cs
+ 24.56%    2.257      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112084215 and revision id 1737310. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112084428 and revision id 1737312. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
