--- a/wiki/cs/Manual;All_workbenches_at_a_glance.html
+++ b/wiki/cs/Manual;All_workbenches_at_a_glance.html
@@ -1258,11 +1258,9 @@
 <h3><span id="Extern.C3.AD_pracovn.C3.AD_plochy"></span><span class="mw-headline" id="Extern&iacute;_pracovn&iacute;_plochy">Extern&iacute; pracovn&iacute; plochy</span></h3>
 <p>Existuje tak&eacute; &#345;ada dal&scaron;&iacute;ch velmi u&#382;ite&#269;n&yacute;ch pracovn&iacute;ch ploch vytvo&#345;en&yacute;ch &#269;leny komunity FreeCADu. A&#269;koli nejsou sou&#269;&aacute;st&iacute; standardn&iacute; instalace FreeCADu, lze je snadno nainstalovat jako dopl&#328;ky. V&scaron;echny jsou uvedeny v repozit&aacute;&#345;i <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-addons">FreeCAD-addons</a>. Mezi nejrozvinut&#283;j&scaron;&iacute; pat&#345;&iacute;:
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>The <a rel="nofollow" class="external text" href="https://github.com/hamish2014/FreeCAD_drawing_dimensioning">Drawing Dimensioning Workbench</a> offers many new tools to work directly on Drawing Sheets and allow you to add dimensions, annotations and other technical symbols with great control over their aspect. <b>The Drawing Dimensioning Workbench is no longer maintained.</b></li>
-<li>The <a rel="nofollow" class="external text" href="https://github.com/shaise/FreeCAD_FastenersWB">Fasteners Workbench</a> offers a wide range of ready-to-insert fasteners objects like screws, bolts, rods, washers and nuts. Many options and settings are available.</li>
-<li>The <a rel="nofollow" class="external text" href="https://github.com/kbwbe/A2plus">A2plus</a> workbench offers a series of tools to mount and work with <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Assembly_modelling">assemblies</a>.</li></ul>
-</div>
+<ul><li><a rel="nofollow" class="external text" href="https://github.com/hamish2014/FreeCAD_drawing_dimensioning">Pracovn&iacute; prost&#345;ed&iacute; pro k&oacute;tov&aacute;n&iacute; v&yacute;kres&#367;</a> nab&iacute;z&iacute; mnoho nov&yacute;ch n&aacute;stroj&#367; pro p&#345;&iacute;mou pr&aacute;ci na v&yacute;kresov&yacute;ch listech a umo&#382;&#328;uje p&#345;id&aacute;vat k&oacute;ty, pozn&aacute;mky a dal&scaron;&iacute; technick&eacute; symboly s velkou kontrolou nad jejich vzhledem. <b>Pracovn&iacute; prost&#345;ed&iacute; pro k&oacute;tov&aacute;n&iacute; v&yacute;kres&#367; ji&#382; nen&iacute; d&aacute;le rozv&iacute;jeno.</b></li>
+<li><a rel="nofollow" class="external text" href="https://github.com/shaise/FreeCAD_FastenersWB">Pracovn&iacute; prost&#345;ed&iacute; Fasteners</a> nab&iacute;z&iacute; &scaron;irokou &scaron;k&aacute;lu p&#345;ipraven&yacute;ch spojovac&iacute;ch prvk&#367;, jako jsou &scaron;rouby, svorn&iacute;ky, ty&#269;e, podlo&#382;ky a matice. K dispozici je mnoho mo&#382;nost&iacute; a nastaven&iacute;.</li>
+<li>Pracovn&iacute; prost&#345;ed&iacute; <a rel="nofollow" class="external text" href="https://github.com/kbwbe/A2plus">A2plus</a> nab&iacute;z&iacute; &#345;adu n&aacute;stroj&#367; pro mont&aacute;&#382; a pr&aacute;ci se <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Assembly_modelling">sestavami</a>.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p><b>Read more</b>
 </p>
@@ -1288,13 +1286,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112084429
+Cached time: 20260112084737
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.524 seconds
-Real time usage: 0.839 seconds
-Preprocessor visited node count: 624/1000000
+CPU time usage: 0.501 seconds
+Real time usage: 0.800 seconds
+Preprocessor visited node count: 623/1000000
 Post&#8208;expand include size: 8634/2097152 bytes
 Template argument size: 944/2097152 bytes
 Highest expansion depth: 5/100
@@ -1304,13 +1302,13 @@ Unstrip post&#8208;expand size: 2869/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.189      1 -total
- 69.40%    6.377      1 Template:Manual:TOC
- 51.05%    4.691      1 Manual:Summary/cs
- 24.56%    2.257      2 Template:Docnav
+100.00%   12.597      1 -total
+ 76.18%    9.596      1 Template:Manual:TOC
+ 53.16%    6.696      1 Manual:Summary/cs
+ 18.52%    2.333      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112084428 and revision id 1737312. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112084736 and revision id 1737314. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
