--- a/wiki/cs/Manual;All_workbenches_at_a_glance.html
+++ b/wiki/cs/Manual;All_workbenches_at_a_glance.html
@@ -1263,16 +1263,14 @@
 <li>Pracovn&iacute; prost&#345;ed&iacute; <a rel="nofollow" class="external text" href="https://github.com/kbwbe/A2plus">A2plus</a> nab&iacute;z&iacute; &#345;adu n&aacute;stroj&#367; pro mont&aacute;&#382; a pr&aacute;ci se <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Assembly_modelling">sestavami</a>.</li></ul>
 <p><b>Dal&scaron;&iacute; informace:</b>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><a href="../Workbenches.html" title="Workbenches">The complete list of workbenches</a></li>
-<li><a href="../Part_Workbench.html" title="Part Workbench">The Part Workbench</a></li>
-<li><a href="../Draft_Workbench.html" title="Draft Workbench">The Draft Workbench</a></li>
-<li><a href="../PartDesign_Workbench.html" title="PartDesign Workbench">The Sketcher and Part Design Workbench</a></li>
-<li><a href="../BIM_Workbench.html" title="BIM Workbench">The BIM Workbench</a></li>
-<li><a href="../TechDraw_Workbench.html" title="TechDraw Workbench">The TechDraw Workbench</a></li>
-<li><a href="../FEM_Workbench.html" title="FEM Workbench">The FEM Workbench</a></li>
-<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-addons">The FreeCAD-addons repository</a></li></ul>
-</div>
+<ul><li><a href="../Workbenches.html" title="Workbenches">Kompletn&iacute; seznam pracovn&iacute;ch ploch</a></li>
+<li><a href="../Part_Workbench.html" title="Part Workbench">Pracovn&iacute; plocha Part</a></li>
+<li><a href="../Draft_Workbench.html" title="Draft Workbench">Pracovn&iacute; plocha Draft</a></li>
+<li><a href="../PartDesign_Workbench.html" title="PartDesign Workbench">TPracovn&iacute; plocha Sketcher a Part Design</a></li>
+<li><a href="../BIM_Workbench.html" title="BIM Workbench">Pracovn&iacute; plocha BIM</a></li>
+<li><a href="../TechDraw_Workbench.html" title="TechDraw Workbench">Pracovn&iacute; plocha TechDraw</a></li>
+<li><a href="../FEM_Workbench.html" title="FEM Workbench">Pracovn&iacute; plocha TechDraw</a></li>
+<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-addons">Repozit&aacute;&#345; dopl&#328;k&#367; aplikace FreeCAD</a></li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -1284,13 +1282,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112084840
+Cached time: 20260112085113
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.422 seconds
-Real time usage: 0.504 seconds
-Preprocessor visited node count: 622/1000000
+CPU time usage: 0.457 seconds
+Real time usage: 0.646 seconds
+Preprocessor visited node count: 621/1000000
 Post&#8208;expand include size: 8634/2097152 bytes
 Template argument size: 944/2097152 bytes
 Highest expansion depth: 5/100
@@ -1300,13 +1298,13 @@ Unstrip post&#8208;expand size: 2869/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.052      1 -total
- 69.31%    5.581      1 Template:Manual:TOC
- 54.88%    4.419      1 Manual:Summary/cs
- 23.98%    1.931      2 Template:Docnav
+100.00%    8.986      1 -total
+ 66.67%    5.991      1 Template:Manual:TOC
+ 47.18%    4.240      1 Manual:Summary/cs
+ 27.20%    2.444      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112084839 and revision id 1737316. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112085113 and revision id 1737318. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
