--- a/wiki/cs/Manual;Traditional_modeling,_the_CSG_way.html
+++ b/wiki/cs/Manual;Traditional_modeling,_the_CSG_way.html
@@ -11,8 +11,8 @@
 <li><a href="../ja/Manual;Traditional_modeling,_the_CSG_way.html" class="mw-pt-progress mw-pt-progress--low" title="&#12510;&#12491;&#12517;&#12450;&#12523;&#65306;CSG&#27969;&#12398;&#20253;&#32113;&#30340;&#12514;&#12487;&#12522;&#12531;&#12464;&#26041;&#27861; (2% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/Manual;Traditional_modeling,_the_CSG_way.html" class="mw-pt-progress mw-pt-progress--complete" title="&#49444;&#47749;&#49436;:&#51204;&#53685;&#51201;&#51064; &#47784;&#45944;&#47553;, CSG &#48169;&#49885; (100% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;All_workbenches_at_a_glance.html" title="Manual:All workbenches at a glance">All workbenches at a glance</a></div>
-    <div><a href="../Manual;Traditional_2D_drafting.html" title="Manual:Traditional 2D drafting">Traditional 2D drafting</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;All_workbenches_at_a_glance.html" title="Manual:All workbenches at a glance">P&#345;ehled v&scaron;ech pracovn&iacute;ch ploch</a></div>
+    <div><a href="../Manual;Traditional_2D_drafting.html" title="Manual:Traditional 2D drafting">Tradi&#269;n&iacute; 2D kreslen&iacute;</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../Manual;Introduction.html" title="Manual:Introduction">Manual start</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Crystal_Clear_manual.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="128" data-file-height="128"></span></span></div>
@@ -195,15 +195,15 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112085303
+Cached time: 20260112085414
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.106 seconds
-Real time usage: 0.157 seconds
+CPU time usage: 0.096 seconds
+Real time usage: 0.202 seconds
 Preprocessor visited node count: 80/1000000
-Post&#8208;expand include size: 9103/2097152 bytes
-Template argument size: 820/2097152 bytes
+Post&#8208;expand include size: 9121/2097152 bytes
+Template argument size: 832/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -211,14 +211,14 @@ Unstrip post&#8208;expand size: 2814/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.361      1 -total
- 58.04%    7.755      1 Template:Manual:TOC
- 45.15%    6.032      1 Manual:Summary/cs
- 19.43%    2.596      2 Template:Docnav
- 19.10%    2.552      1 Template:Caption
+100.00%   15.054      1 -total
+ 62.61%    9.426      1 Template:Manual:TOC
+ 53.61%    8.071      1 Manual:Summary/cs
+ 18.11%    2.726      1 Template:Caption
+ 16.49%    2.483      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410772-0!canonical and timestamp 20260112085303 and revision id 1737320. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410772-0!canonical and timestamp 20260112085414 and revision id 1737322. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
