Created page with "V pracovním prostředí PartDesign programu FreeCAD se objekty vytvářejí především ze skic, což jsou 2D profily složené z lineárních segmentů, jako jsou přímky, oblouky nebo elipsy, spolu s řadou omezení. Tato omezení určují konkrétní geometrická pravidla pro skicu a lze je aplikovat jak na samotné segmenty, tak na jejich klíčové body, jako jsou koncové body nebo středové body. Například můžete použít vertikální omezení na přímku,..."

--- a/wiki/cs/Manual;Modeling_for_product_design.html
+++ b/wiki/cs/Manual;Modeling_for_product_design.html
@@ -71,11 +71,8 @@
 </p><p>Abychom ilustrovali, jak funguje pracovn&iacute; prost&#345;ed&iacute; PartDesign, namodelujeme tento zn&aacute;m&yacute; d&iacute;l <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Lego">Lega</a>. Pokud chcete vyzkou&scaron;et jin&yacute; objekt, m&#367;&#382;ete se tak&eacute; pod&iacute;vat na <a href="../Basic_Part_Design_Tutorial_019.html" title="Basic Part Design Tutorial 019">Z&aacute;kladn&iacute; n&aacute;vrh sou&#269;&aacute;sti &ndash; v&yacute;ukov&yacute; program 019</a>.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Exercise1_RedBrick.png&amp;filetimestamp=20240928110145&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Exercise1_RedBrick.png" decoding="async" width="668" height="472" class="mw-file-element" data-file-width="668" data-file-height="472"></a></span>
 </p><p>Nyn&iacute; budeme pou&#382;&iacute;vat v&yacute;hradn&#283; n&aacute;stroje <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a> a <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign</a>. Jeliko&#382; v&scaron;echny n&aacute;stroje z pracovn&iacute;ho prost&#345;ed&iacute; Sketcher jsou tak&eacute; sou&#269;&aacute;st&iacute; pracovn&iacute;ho prost&#345;ed&iacute; Part Design, m&#367;&#382;eme z&#367;stat v Part Design a nebudeme muset p&#345;ep&iacute;nat mezi t&#283;mito dv&#283;ma prost&#345;ed&iacute;mi.
+</p><p>V pracovn&iacute;m prost&#345;ed&iacute; PartDesign programu FreeCAD se objekty vytv&aacute;&#345;ej&iacute; p&#345;edev&scaron;&iacute;m ze skic, co&#382; jsou 2D profily slo&#382;en&eacute; z line&aacute;rn&iacute;ch segment&#367;, jako jsou p&#345;&iacute;mky, oblouky nebo elipsy, spolu s &#345;adou omezen&iacute;. Tato omezen&iacute; ur&#269;uj&iacute; konkr&eacute;tn&iacute; geometrick&aacute; pravidla pro skicu a lze je aplikovat jak na samotn&eacute; segmenty, tak na jejich kl&iacute;&#269;ov&eacute; body, jako jsou koncov&eacute; body nebo st&#345;edov&eacute; body. Nap&#345;&iacute;klad m&#367;&#382;ete pou&#382;&iacute;t vertik&aacute;ln&iacute; omezen&iacute; na p&#345;&iacute;mku, aby z&#367;stala dokonale vertik&aacute;ln&iacute;, nebo omezen&iacute; polohy (zamknut&iacute;), aby se koncov&yacute; bod neh&yacute;bal.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>In FreeCAD's PartDesign Workbench, objects are primarily built from Sketches, which are 2D profiles made up of linear segments such as lines, arcs, or ellipses, along with a series of constraints. These constraints dictate specific geometric rules for the sketch and can be applied to both the segments themselves and their key points, like endpoints or center points. For example, you can use a vertical constraint on a line to keep it perfectly vertical, or a position (lock) constraint to fix an endpoint in place, preventing it from moving.
-</p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>A sketch is considered fully constrained when every point is locked into position by the appropriate number of constraints, meaning no part of the sketch can be moved freely. Achieving a fully constrained sketch is ideal because it ensures the design is well-defined and stable, allowing for predictable changes later in the design process. On the other hand, if more constraints are added than necessary&mdash;referred to as an over-constrained sketch&mdash;this can cause conflicts in the geometry. FreeCAD will alert you to any redundant or conflicting constraints, as over-constraining can cause issues in further operations like extrusions or cuts.
 </p>
@@ -216,13 +213,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112094144
+Cached time: 20260112094227
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.106 seconds
-Real time usage: 0.172 seconds
-Preprocessor visited node count: 94/1000000
+CPU time usage: 0.141 seconds
+Real time usage: 0.207 seconds
+Preprocessor visited node count: 93/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 780/2097152 bytes
 Highest expansion depth: 5/100
@@ -232,13 +229,13 @@ Unstrip post&#8208;expand size: 2702/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.144      1 -total
- 64.89%    7.231      1 Template:Manual:TOC
- 46.37%    5.167      1 Manual:Summary/cs
- 31.29%    3.487      2 Template:Docnav
+100.00%   10.346      1 -total
+ 74.75%    7.733      1 Template:Manual:TOC
+ 53.84%    5.570      1 Manual:Summary/cs
+ 20.64%    2.135      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112094144 and revision id 1737365. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112094226 and revision id 1737367. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
