Created page with "* Přepněte do [[Image:Workbench_PartDesign.svg|16px]] [[PartDesign_Workbench|Pracovního prostředí PartDesign]]. * Klikněte na tlačítko [[Image:PartDesign_NewSketch.svg|16px]] [[PartDesign_NewSketch|Vytvořit náčrt]] a vyberte rovinu '''XY''', která je "zemní" rovinou. Náčrt bude vytvořen a okamžitě se přepne do režimu úprav, přičemž pohled se otočí tak, aby byl náčrt zobrazen ortogonálně. * Nakreslete obdélník výběrem nástroje Image:Sk..."

--- a/wiki/cs/Manual;Modeling_for_product_design.html
+++ b/wiki/cs/Manual;Modeling_for_product_design.html
@@ -76,13 +76,11 @@
 </p><p>P&#345;id&aacute;n&iacute; spr&aacute;vn&yacute;ch vazeb je kl&iacute;&#269;em k vytvo&#345;en&iacute; stabiln&iacute;ho parametrick&eacute;ho modelu. Pe&#269;liv&yacute;m vyv&aacute;&#382;en&iacute;m omezen&iacute; m&#367;&#382;ete snadno upravovat nebo p&#345;izp&#367;sobovat n&aacute;&#269;rtky, ani&#382; byste naru&scaron;ili geometrii. D&iacute;ky t&eacute;to kontrole je Part Design Workbench v&yacute;konn&yacute;m n&aacute;strojem pro p&#345;esn&eacute; parametrick&eacute; modelov&aacute;n&iacute;, zejm&eacute;na pro &uacute;koly jako 3D tisk, kde je pro v&yacute;robu p&#345;esn&yacute;ch a funk&#269;n&iacute;ch d&iacute;l&#367; z&aacute;sadn&iacute; zachov&aacute;n&iacute; spr&aacute;vn&yacute;ch geometrick&yacute;ch vztah&#367;.
 </p><p>N&aacute;&#269;rtky maj&iacute; re&#382;im &uacute;prav, ve kter&eacute;m lze m&#283;nit jejich geometrii a omezen&iacute;. Po dokon&#269;en&iacute; &uacute;prav a opu&scaron;t&#283;n&iacute; re&#382;imu &uacute;prav se n&aacute;&#269;rtky chovaj&iacute; jako jak&yacute;koli jin&yacute; objekt FreeCADu a lze je pou&#382;&iacute;t jako stavebn&iacute; bloky pro v&scaron;echny n&aacute;stroje Part Design, ale tak&eacute; v jin&yacute;ch pracovn&iacute;ch prostorech, jako jsou <a href="../Part_Workbench.html" title="Part Workbench">Part</a> nebo <a href="../Arch_Workbench.html" title="Arch Workbench">Arch</a>. <a href="../Draft_Workbench.html" title="Draft Workbench">Pracovn&iacute; plocha Draft</a> tak&eacute; obsahuje n&aacute;stroj, kter&yacute; p&#345;ev&aacute;d&iacute; objekty Draft na n&aacute;&#269;rtky a naopak.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>Switch to the <span typeof="mw:File"><a href="../index.php?title=Workbench_PartDesign.svg&amp;filetimestamp=20240405092932&amp;.html" class="mw-file-description"><img src="../File/Workbench_PartDesign.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign Workbench</a>.</li>
-<li>Click on the <span typeof="mw:File"><a href="../index.php?title=PartDesign_NewSketch.svg&amp;filetimestamp=20240726125744&amp;.html" class="mw-file-description"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">New Sketch</a> button and choose the <b>XY</b> plane, which is the "ground" plane. The sketch will be created and will immediately be switched to edit mode, and the view will be rotated to look at your sketch orthogonally.</li>
-<li>Draw a rectangle by selecting the <span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateRectangle.svg&amp;filetimestamp=20240101090846&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateRectangle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle">Rectangle</a> tool and clicking two corner points. You can place the two points anywhere, but do not click on either axes. The correct location of the points will be set in one of the next steps.</li>
-<li>You will notice that a couple of constraints have automatically been added to our rectangle: the vertical segments have received a vertical constraint, the horizontal ones a horizontal constraint, and each corner a point-on-point constraint that glues the segments together. You can experiment with moving the rectangle around by dragging its lines with the mouse, all the geometry will keep obeying the constraints.</li>
-<li>Right now our sketch is under-constrained, as it's missing four constraints: its length, width, and its X and Y positioning. This lack of constraints allows you to freely move the sketch along the X and Y axes. Until these constraints are defined, the geometry is not fully locked in place, meaning both the size and position of the sketch remain adjustable. To fully define the sketch, we need to apply constraints that specify these values and lock the sketch in position.</li></ul>
-</div>
+<ul><li>P&#345;epn&#283;te do <span typeof="mw:File"><a href="../index.php?title=Workbench_PartDesign.svg&amp;filetimestamp=20240405092932&amp;.html" class="mw-file-description"><img src="../File/Workbench_PartDesign.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">Pracovn&iacute;ho prost&#345;ed&iacute; PartDesign</a>.</li>
+<li>Klikn&#283;te na tla&#269;&iacute;tko <span typeof="mw:File"><a href="../index.php?title=PartDesign_NewSketch.svg&amp;filetimestamp=20240726125744&amp;.html" class="mw-file-description"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">Vytvo&#345;it n&aacute;&#269;rt</a> a vyberte rovinu <b>XY</b>, kter&aacute; je "zemn&iacute;" rovinou. N&aacute;&#269;rt bude vytvo&#345;en a okam&#382;it&#283; se p&#345;epne do re&#382;imu &uacute;prav, p&#345;i&#269;em&#382; pohled se oto&#269;&iacute; tak, aby byl n&aacute;&#269;rt zobrazen ortogon&aacute;ln&#283;.</li>
+<li>Nakreslete obd&eacute;ln&iacute;k v&yacute;b&#283;rem n&aacute;stroje <span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateRectangle.svg&amp;filetimestamp=20240101090846&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateRectangle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle">Obd&eacute;ln&iacute;k</a> a kliknut&iacute;m na dva rohov&eacute; body. Tyto dva body m&#367;&#382;ete um&iacute;stit kamkoli, ale neklikejte na &#382;&aacute;dnou z os. Spr&aacute;vn&eacute; um&iacute;st&#283;n&iacute; bod&#367; nastav&iacute;te v jednom z n&aacute;sleduj&iacute;c&iacute;ch krok&#367;.</li>
+<li>Zjist&iacute;te, &#382;e k na&scaron;emu obd&eacute;ln&iacute;ku bylo automaticky p&#345;id&aacute;no n&#283;kolik omezen&iacute;: svisl&eacute; segmenty dostaly svisl&eacute; omezen&iacute;, vodorovn&eacute; segmenty vodorovn&eacute; omezen&iacute; a ka&#382;d&yacute; roh bodov&eacute; omezen&iacute;, kter&eacute; segmenty spojuje. M&#367;&#382;ete si vyzkou&scaron;et pohybovat obd&eacute;ln&iacute;kem ta&#382;en&iacute;m jeho lini&iacute; my&scaron;&iacute;, ve&scaron;ker&aacute; geometrie bude i nad&aacute;le dodr&#382;ovat omezen&iacute;.</li>
+<li>V sou&#269;asn&eacute; dob&#283; je n&aacute;&scaron; n&aacute;&#269;rt nedostate&#269;n&#283; omezen, proto&#382;e mu chyb&iacute; &#269;ty&#345;i omezen&iacute;: d&eacute;lka, &scaron;&iacute;&#345;ka a poloha X a Y. Tento nedostatek omezen&iacute; v&aacute;m umo&#382;&#328;uje voln&#283; pohybovat n&aacute;&#269;rtem pod&eacute;l os X a Y. Dokud nejsou tato omezen&iacute; definov&aacute;na, geometrie nen&iacute; pln&#283; uzam&#269;ena na m&iacute;st&#283;, co&#382; znamen&aacute;, &#382;e velikost i poloha n&aacute;&#269;rtu z&#367;st&aacute;vaj&iacute; nastaviteln&eacute;. Abychom n&aacute;&#269;rt pln&#283; definovali, mus&iacute;me pou&#382;&iacute;t omezen&iacute;, kter&aacute; specifikuj&iacute; tyto hodnoty a uzamknou n&aacute;&#269;rt na m&iacute;st&#283;.</li></ul>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Exercise1_re_UC.png&amp;filetimestamp=20240928085639&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Exercise1_re_UC.png" decoding="async" width="977" height="408" class="mw-file-element" data-file-width="977" data-file-height="408"></a></span>
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -204,13 +202,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112094521
+Cached time: 20260112095510
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.122 seconds
-Real time usage: 0.197 seconds
-Preprocessor visited node count: 90/1000000
+CPU time usage: 0.123 seconds
+Real time usage: 0.172 seconds
+Preprocessor visited node count: 89/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 780/2097152 bytes
 Highest expansion depth: 5/100
@@ -220,13 +218,13 @@ Unstrip post&#8208;expand size: 2702/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.013      1 -total
- 69.22%    6.239      1 Template:Manual:TOC
- 54.24%    4.889      1 Manual:Summary/cs
- 26.45%    2.384      2 Template:Docnav
+100.00%    8.849      1 -total
+ 75.56%    6.686      1 Template:Manual:TOC
+ 60.17%    5.324      1 Manual:Summary/cs
+ 21.03%    1.861      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112094521 and revision id 1737373. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112095510 and revision id 1737375. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
