Created page with "* Nyní přidáme další tři vazby: ** Aktivujte nástroj pro [[Image:Sketcher_Dimension.svg|16px]] [[Sketcher_Dimension|automatické rozměry]], vyberte jeden ze svislých segmentů a nastavte jeho délku na 23,7 mm. ** S aktivním nástrojem vyberte jeden z vodorovných segmentů a nastavte jeho délku na 47,7 mm. ** Aktivujte nástroj pro [[Image:Sketcher_ConstrainSymmetric.svg|16px]] [[Sketcher_ConstrainSymmetric|symetrickou vazbu]], vyberte levý horní roh obdél..."

--- a/wiki/cs/Manual;Modeling_for_product_design.html
+++ b/wiki/cs/Manual;Modeling_for_product_design.html
@@ -83,13 +83,11 @@
 <li>V sou&#269;asn&eacute; dob&#283; je n&aacute;&scaron; n&aacute;&#269;rt nedostate&#269;n&#283; omezen, proto&#382;e mu chyb&iacute; &#269;ty&#345;i omezen&iacute;: d&eacute;lka, &scaron;&iacute;&#345;ka a poloha X a Y. Tento nedostatek omezen&iacute; v&aacute;m umo&#382;&#328;uje voln&#283; pohybovat n&aacute;&#269;rtem pod&eacute;l os X a Y. Dokud nejsou tato omezen&iacute; definov&aacute;na, geometrie nen&iacute; pln&#283; uzam&#269;ena na m&iacute;st&#283;, co&#382; znamen&aacute;, &#382;e velikost i poloha n&aacute;&#269;rtu z&#367;st&aacute;vaj&iacute; nastaviteln&eacute;. Abychom n&aacute;&#269;rt pln&#283; definovali, mus&iacute;me pou&#382;&iacute;t omezen&iacute;, kter&aacute; specifikuj&iacute; tyto hodnoty a uzamknou n&aacute;&#269;rt na m&iacute;st&#283;.</li></ul>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Exercise1_re_UC.png&amp;filetimestamp=20240928085639&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Exercise1_re_UC.png" decoding="async" width="977" height="408" class="mw-file-element" data-file-width="977" data-file-height="408"></a></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>Now, let's add three more constraints:
-<ul><li>Activate the <span typeof="mw:File"><a href="../index.php?title=Sketcher_Dimension.svg&amp;filetimestamp=20240102162811&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Dimension.html" title="Sketcher Dimension">automatic dimension</a> tool, select one of the vertical segments, and set its length to 23.7 mm.</li>
-<li>With the tool still active, select one the horizontal segments, and set its length to 47.7 mm.</li>
-<li>Activate the <span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainSymmetric.svg&amp;filetimestamp=20240101173322&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainSymmetric.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainSymmetric.html" title="Sketcher ConstrainSymmetric">symmetry constraint</a> tool, select the upper left corner point of the rectangle, then the lower right corner point, and finally the origin point (the dot where the red and green axes intersect). This ensures the rectangle stays centered on the origin, limiting its range of movement and providing symmetry across the two axes.</li></ul></li>
-<li>You will now notice that our rectangle has turned green, indicating that it is fully constrained. This means every aspect of the sketch, including its position, size, and shape, is now fully defined and locked in place. It is generally a good practice to ensure that sketches are fully constrained, as this helps maintain control over your design and prevents unintended changes during further operations.</li></ul>
-</div>
+<ul><li>Nyn&iacute; p&#345;id&aacute;me dal&scaron;&iacute; t&#345;i vazby:
+<ul><li>Aktivujte n&aacute;stroj pro <span typeof="mw:File"><a href="../index.php?title=Sketcher_Dimension.svg&amp;filetimestamp=20240102162811&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Dimension.html" title="Sketcher Dimension">automatick&eacute; rozm&#283;ry</a>, vyberte jeden ze svisl&yacute;ch segment&#367; a nastavte jeho d&eacute;lku na 23,7 mm.</li>
+<li>S aktivn&iacute;m n&aacute;strojem vyberte jeden z vodorovn&yacute;ch segment&#367; a nastavte jeho d&eacute;lku na 47,7 mm.</li>
+<li>Aktivujte n&aacute;stroj pro <span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainSymmetric.svg&amp;filetimestamp=20240101173322&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainSymmetric.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainSymmetric.html" title="Sketcher ConstrainSymmetric">symetrickou vazbu</a>, vyberte lev&yacute; horn&iacute; roh obd&eacute;ln&iacute;ku, pot&eacute; prav&yacute; doln&iacute; roh a nakonec po&#269;&aacute;te&#269;n&iacute; bod (bod, kde se prot&iacute;naj&iacute; &#269;erven&aacute; a zelen&aacute; osa). T&iacute;m zajist&iacute;te, &#382;e obd&eacute;ln&iacute;k z&#367;stane vycentrov&aacute;n na po&#269;&aacute;te&#269;n&iacute;m bod&#283;, co&#382; omez&iacute; jeho rozsah pohybu a zajist&iacute; symetrii nap&#345;&iacute;&#269; ob&#283;ma osami.</li></ul></li>
+<li>Nyn&iacute; si v&scaron;imnete, &#382;e n&aacute;&scaron; obd&eacute;ln&iacute;k zezelenal, co&#382; znamen&aacute;, &#382;e je pln&#283; zavazben&yacute;. To znamen&aacute;, &#382;e v&scaron;echny aspekty n&aacute;&#269;rtu, v&#269;etn&#283; jeho polohy, velikosti a tvaru, jsou nyn&iacute; pln&#283; definov&aacute;ny a uzam&#269;eny na sv&eacute;m m&iacute;st&#283;. Obecn&#283; je dobr&eacute; zajistit, aby n&aacute;&#269;rtky byly pln&#283; zavazben&yacute;, proto&#382;e to pom&aacute;h&aacute; udr&#382;et kontrolu nad n&aacute;vrhem a zabra&#328;uje necht&#283;n&yacute;m zm&#283;n&aacute;m b&#283;hem dal&scaron;&iacute;ch operac&iacute;.</li></ul>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Exercise1_re.png&amp;filetimestamp=20240928085315&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Exercise1_re.png" decoding="async" width="603" height="452" class="mw-file-element" data-file-width="603" data-file-height="452"></a></span>
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -202,13 +200,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112095510
+Cached time: 20260112100520
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.123 seconds
-Real time usage: 0.172 seconds
-Preprocessor visited node count: 89/1000000
+CPU time usage: 0.118 seconds
+Real time usage: 0.167 seconds
+Preprocessor visited node count: 88/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 780/2097152 bytes
 Highest expansion depth: 5/100
@@ -218,13 +216,13 @@ Unstrip post&#8208;expand size: 2702/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.849      1 -total
- 75.56%    6.686      1 Template:Manual:TOC
- 60.17%    5.324      1 Manual:Summary/cs
- 21.03%    1.861      2 Template:Docnav
+100.00%   10.390      1 -total
+ 68.44%    7.111      1 Template:Manual:TOC
+ 53.65%    5.574      1 Manual:Summary/cs
+ 27.33%    2.839      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112095510 and revision id 1737375. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112100520 and revision id 1737377. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
